<resources>
    <string name="app_name">MathGame</string>
    <string name="caption_credit">created by Supakin@xef</string>
    <string name="button_play">กดปุ่มนี้เพื่อเริ่มเล่น</string>
    <string name="player_name_topic">ชื่อผู้เล่น</string>
    <string name="caption_menu">เลือกหมวดที่คุณอยากเล่น</string>
    <string name="menu_topic">หมวดหมู่</string>
    <string name="plus">บวก</string>
    <string name="minus">ลบ</string>
    <string name="multiplied">คูณ</string>
    <string name="divide">หาร</string>
    <string name="correct">ถูก</string>
    <string name="wrong">ผิด</string>
    <string name="your_score">คะแนนของคุณ</string>
    <string name="header_img_menu">พื้นหลังหัวข้อของเมนู</string>
    <string name="demo_score">100000</string>
    <string name="demo_question">10</string>
    <string name="demo_question_operator">+</string>
    <string name="demo_guideline">guideline</string>
    <string name="demo_answer">100</string>
    <string name="content_description_img_main">image main</string>
    <string name="demo_summary_score">Summary Score</string>
    <string name="btn_next">กดเพื่อเล่นต่อ</string>
    <string name="content_description_img_result">image result</string>
    <string name="caption_play_plus">ผลบวกของโจทย์ด้านบนคือเท่าไหร่กันนะ ?</string>
    <string name="caption_play_minus">ผลลบของโจทย์ด้านบนคือเท่าไหร่กันนะ ?</string>
    <string name="caption_play_multiplied">ผลคูณของโจทย์ด้านบนคือเท่าไหร่กันนะ ?</string>
    <string name="caption_play_divide">ผลหารของโจทย์ด้านบนคือเท่าไหร่กันนะ ?</string>
    <string name="operator_plus">+</string>
    <string name="operator_minus">-</string>
    <string name="operator_multiplied">*</string>
    <string name="operator_divide">/</string>
    <string name="toast_back_again_for_exit">กดอีกครั้งเพื่อออกจากเกม</string>
    <string name="total_correct">%d ข้อที่ถูกแล้ว</string>
    <string name="total_incorrect">%d ข้อที่ผิดแล้ว</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_home">หน้าแรก</string>
    <string name="menu_menu">หมวดหมู่เกม</string>
    <string name="menu_play">กำลังเล่น</string>
    <string name="menu_result">ผลลัพธ์</string>
    <string name="please_key_name">กรุณากรอกชื่อผู้เล่น</string>
    <string name="demo_name">demo name</string>
    <string name="menu_ranking">อันดับ</string>
    <string name="demo_ranking">100</string>
    <string name="error_is_empty">กรุณาระบุชื่อผู้เล่นอย่างน้อย 1 ตัวอักษร</string>
    <string name="error_is_long">กรุณาระบุชื่อผู้เล่นที่มีความยาวไม่เกิน 8 ตัวอักษร</string>
    <string name="empty_ranking_player">ยังไม่มีผู้เล่น</string>
    <string name="ranking_score">%d คะแนน (ตอบถูก %d ข้อ, ตอบผิด %d ข้อ)</string>
</resources>