<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/mainFragment">

    <fragment
        android:id="@+id/mainFragment"
        android:name="buu.supakin.mathgameverdatabase.screens.MainFragment"
        android:label="@string/menu_home">
        <action
            android:id="@+id/action_mainFragment_to_menuFragment"
            app:destination="@id/menuFragment"
            app:popUpTo="@id/mainFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_mainFragment_to_rankingFragment"
            app:destination="@id/rankingFragment" />
    </fragment>
    <fragment
        android:id="@+id/menuFragment"
        android:name="buu.supakin.mathgameverdatabase.screens.MenuFragment"
        android:label="@string/menu_menu">
        <action
            android:id="@+id/action_menuFragment_to_playFragment"
            app:destination="@id/playFragment"
            app:popUpTo="@id/menuFragment" />
        <action
            android:id="@+id/action_menuFragment_to_mainFragment"
            app:destination="@id/mainFragment" />
        <argument
            android:name="playerId"
            app:argType="long"
            android:defaultValue="-1L" />
    </fragment>
    <fragment
        android:id="@+id/playFragment"
        android:name="buu.supakin.mathgameverdatabase.screens.PlayFragment"
        android:label="@string/menu_play">
        <action
            android:id="@+id/action_playFragment_to_resultFragment"
            app:destination="@id/resultFragment"
            app:popUpTo="@id/playFragment" />
        <action
            android:id="@+id/action_playFragment_to_menuFragment"
            app:destination="@id/menuFragment" />
        <argument
            android:name="playerId"
            app:argType="long"
            android:defaultValue="-1L" />
        <argument
            android:name="menu"
            app:argType="integer" />
    </fragment>
    <fragment
        android:id="@+id/resultFragment"
        android:name="buu.supakin.mathgameverdatabase.screens.ResultFragment"
        android:label="@string/menu_result">
        <action
            android:id="@+id/action_resultFragment_to_playFragment"
            app:destination="@id/playFragment" />
        <argument
            android:name="playerId"
            app:argType="long" />
        <argument
            android:name="menu"
            android:defaultValue="0" />
        <argument
            android:name="result"
            app:argType="boolean"
            android:defaultValue="true" />
    </fragment>
    <fragment
        android:id="@+id/rankingFragment"
        android:name="buu.supakin.mathgameverdatabase.screens.RankingFragment"
        android:label="@string/menu_ranking">
        <action
            android:id="@+id/action_rankingFragment_to_mainFragment"
            app:destination="@id/mainFragment" />
    </fragment>
</navigation>