<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".screens.MenuFragment"
    >
    <data>
        <variable
            name="gameViewModel"
            type="buu.supakin.mathgameverviewmodel.viewmodels.GameViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="0dp"
            android:layout_height="250dp"
            android:contentDescription="@string/header_img_menu"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/bg_top" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="25dp"
            android:contentDescription="@string/header_img_menu"
            app:layout_constraintEnd_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/bg_score" />

        <TextView
            android:id="@+id/txtScoreCorrect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:text="@{String.valueOf(gameViewModel.correctScore)}"
            android:textColor="@color/colorSuccess"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/imageView4"
            app:layout_constraintStart_toStartOf="@+id/imageView4"
            app:layout_constraintTop_toTopOf="@+id/imageView4" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/correct"
            android:textColor="@color/colorSuccess"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/txtScoreCorrect"
            app:layout_constraintStart_toStartOf="@+id/imageView4" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/wrong"
            android:textColor="@color/colorDanger"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/txtScoreInCorrect"
            app:layout_constraintStart_toStartOf="@+id/imageView4" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/your_score"
            android:textColor="#FF971D"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/imageView4"
            app:layout_constraintStart_toStartOf="@+id/imageView4"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnPlusMode"
            style="@style/btnMenu"
            android:layout_marginStart="20dp"
            android:text="@string/plus"
            app:layout_constraintBaseline_toBaselineOf="@+id/btnMinusMode"
            app:layout_constraintEnd_toStartOf="@+id/btnMinusMode"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btnMultipliedMode"
            style="@style/btnMenu"
            android:layout_marginStart="20dp"
            android:text="@string/multiplied"
            app:layout_constraintBaseline_toBaselineOf="@+id/btnDivideMode"
            app:layout_constraintEnd_toStartOf="@+id/btnDivideMode"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="150dp"
            android:text="@string/menu_topic"
            android:textColor="@color/colorWhite"
            android:textSize="50sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            style="@style/caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/caption_menu"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <Button
            android:id="@+id/btnDivideMode"
            style="@style/btnMenu"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:text="@string/divide"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnMultipliedMode"
            app:layout_constraintTop_toBottomOf="@+id/btnPlusMode" />

        <TextView
            android:id="@+id/txtScoreInCorrect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@{String.valueOf(gameViewModel.inCorrectScore)}"
            android:textColor="@color/colorDanger"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imageView4"
            app:layout_constraintEnd_toEndOf="@+id/imageView4"
            app:layout_constraintStart_toStartOf="@+id/imageView4" />

        <Button
            android:id="@+id/btnMinusMode"
            style="@style/btnMenu"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="@dimen/margin_btn_in"
            android:text="@string/minus"
            app:layout_constraintBottom_toTopOf="@+id/btnDivideMode"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnPlusMode"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
