<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".screens.MainFragment">

    <data>
        <variable
            name="mainViewModel"
            type="buu.supakin.mathgameverdatabase.viewmodels.MainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="400dp"
            android:layout_height="300dp"
            android:contentDescription="@string/content_description_img_main"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.454"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/img_math_topic" />

        <TextView
            android:id="@+id/texPlayerNameTopic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/player_name_topic"
            android:textColor="@color/colorMain"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" />

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/please_key_name"
            android:inputType="textPersonName"
            android:text="@={mainViewModel.name}"
            android:textAlignment="center"
            android:textColor="@color/colorMain"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/texPlayerNameTopic"
            tools:text="@string/please_key_name" />

        <Button
            android:id="@+id/btnPlay"
            style="@style/btnPlay"
            android:layout_marginTop="35dp"
            android:onClick="@{()->mainViewModel.onNext()}"
            android:text="@string/button_play"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textError" />

        <TextView
            android:id="@+id/caption_credit"
            style="@style/caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/caption_credit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textColor="@color/colorDanger"
            android:textStyle="bold"
            android:text="@{mainViewModel.error}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextName" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>